2004-12-05  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_merge_add_del: Shorten name for better display.

2004-12-05  Matt Johnston <matt@ucc.asn.au>

	* tests/t_merge_add_del: added a new test for merging
	  branches where a file is added then removed.
	* testsuite.at: added the new test
	* configure.ac: bumped the prequisite version to 2.58 since
	  some tests use AT_XFAIL_IF

2004-12-04  Nathaniel Smith  <njs@codesourcery.com>

	* change_set.cc (merge_deltas): Call correct variant of
	try_to_merge_files depending on whether ancestor is available.
	* diff_patch.cc (try_to_merge_files -- merge3 version): Add
	assertions about ids.
	(try_to_merge_files -- merge2 version): Likewise.

	* testsuite.at: Add a trivial working merge2 hook.
	* tests/t_related_merge2_data.at: Update to use.
	Mark as expected to PASS.
	* tests/t_merge2_data.at: Likewise.

2004-12-04  Nathaniel Smith  <njs@codesourcery.com>

	* change_set.cc: Remove tabs.
	* diff_patch.cc: Likewise.

2004-11-30  Nathaniel Smith  <njs@codesourcery.com>

	* keys.cc (get_passphrase): Simplify arguments.
	(generate_key_pair): Force new passphrases to come from the user.
	Adapt to new 'get_passphrase' arguments.
	(change_key_passphrase): Likewise.
	(generate_key_pair): Add argument specifying passphrase, for
	exclusive use of the unit tests.
	(signature_round_trip_test): Use it.
	* keys.hh (generate_key_pair): Adjust prototype correspondingly.

	* tests/t_genkey.at: Test that 'genkey' requires the passphrase to
	be entered.
	* tests/t_chkeypass.at: Check that 'chkeypass' fails if no
	passphrase is given.

2004-11-30  Nathaniel Smith  <njs@codesourcery.com>

	* keys.hh: Remove tabs.
	* keys.cc: Likewise.

2004-11-30  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Hook Reference): Clarify description of
	'get_passphrase', following confusion on IRC.

2004-11-30  Joel Rosdahl  <joel@rosdahl.net>

	* ui.cc (fatal): Added missing newlines in fatal message.
