@@ -1,0 +1,41 @@
+AT_SETUP([merge("", "add a, drop a, add a")])
+
+# This test is a bug report.
+AT_XFAIL_IF(true)
+
+MONOTONE_SETUP
+
+AT_DATA(v1a, [foo blah
+])
+AT_DATA(v1b, [bar blah
+])
+AT_DATA(v2a, [baz blah
+])
+
+AT_CHECK(cp v1a testfile)
+AT_CHECK(MONOTONE add testfile, [], [ignore], [ignore])
+COMMIT(testbranch)
+BASE_R_SHA=`BASE_REVISION`
+
+AT_CHECK(cp v1b testfile)
+COMMIT(testbranch)
+
+AT_CHECK(rm -f testfile)
+AT_CHECK(MONOTONE drop testfile, [], [ignore], [ignore])
+COMMIT(testbranch)
+
+AT_CHECK(cp v2a testfile)
+AT_CHECK(MONOTONE add testfile, [], [ignore], [ignore])
+COMMIT(testbranch)
+
+REVERT_TO($BASE_R_SHA)
+
+ADD_FILE(otherfile, [this space for rent
+])
+COMMIT(testbranch)
+
+AT_CHECK(MONOTONE merge, [], [ignore], [ignore])
+AT_CHECK(MONOTONE update, [], [ignore], [ignore])
+AT_CHECK(cmp testfile v2a, [], [ignore])
+
+AT_CLEANUP
