@@ -265,3 +265,4 @@ m4_include(tests/t_tags.at)
 m4_include(tests/t_add_dot.at)
 m4_include(tests/t_cleanup_empty_dir.at)
 m4_include(tests/t_merge_add_del.at)
+m4_include(tests/t_add_drop_add.at)
